# prosit_timsTOF_2023_wrapper

./: Makefile  README.md  pyproject.toml  pytest.ini
__dev/: devel.py  example.py  testing_lmdb.py
src/prosit_timsTOF_2023_wrapper/: get_data_in_project_example.py  main.py  normalizations.py  tf_ops.py  tokenization.py
