[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="prosit_timsTOF_2023_wrapper"
version="0.0.1"
description="SHORT DESC."
readme="README.md"
authors=[
    {name="MatteoLacki",email="matteo.lacki@gmail.com"},
]
dependencies = [
    "click",
    "numpy",
    "numba",
    "numba_progress",
    "pandas",
    "pytest",
    "tensorflow==2.15.*",
    # "tensorflow-probability>=0.22.1",
    "tqdm",
]
requires-python = "==3.11.*"# welcome to the wonderful World of f***ing Machine Learning

[project.optional-dependencies]
plots = [
    "ipython",
    "matplotlib",
    "plotnine",
    "kilograms @ git+https://github.com/midiaIDorg/kilograms.git",
]
dev = [
    "click",# better stick to arparse
    "duckdb",# only for dev
    "matplotlib",
    "kilograms @ git+https://github.com/midiaIDorg/kilograms.git",
    "plotnine",
    "ipython",
]


[project.scripts]
example_shell_script = "prosit_timsTOF_2023_wrapper.cli.example_shell_script:example_shell_script"

[project.urls]
homepage="https://github.com/MatteoLacki/prosit_timsTOF_2023_wrapper.git"
repository="https://github.com/MatteoLacki/prosit_timsTOF_2023_wrapper.git"

[tool.uv]
reinstall-package = ["prosit_timsTOF_2023_wrapper"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prosit_timsTOF_2023_wrapper = [
    "data/*.csv",
    "data/*/variables/*.index",
    "data/*/variables/*.data*",
    "data/*/saved_model.pb",
]
